# QuantTradingPro

./: .gitignore  .pre-commit-config.yml  LICENSE  README.md  pyproject.toml  quick_analysis_20260323_090004.py  requirements.txt  setup.py  sponsor.yml  test_api_write.md
.github/: FUNDING.yml
.github/workflows/: cd.yml  ci.yml  docs.yml
docs/: conf.py  index.rst
docs/api/: modules.rst
docs/faq/: faq.rst
docs/tutorials/: getting_started.md
examples/beginner/: simple_ma_strategy.py
src/backtesting/: engine.py
src/risk_management/: position_sizing.py
src/strategies/: mean_reversion.py  momentum.py  trend_following.py
tests/: test_basic.py
