[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quanttradingpro"
version = "0.1.0"
description = "Professional Quantitative Trading Library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "basten99", email = "basten99@github.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "yfinance>=0.2.0",
    "alpha_vantage>=2.3.0",
    "requests>=2.26.0",
    "scikit-learn>=1.0.0",
    "backtrader>=1.9.76.123",
    "pyportfolioopt>=1.5.0",
    "python-dotenv>=0.19.0",
    "loguru>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.930",
    "pre-commit>=2.17.0",
]
docs = [
    "sphinx>=4.3.0",
    "sphinx-rtd-theme>=1.0.0",
    "nbsphinx>=0.8.7",
]
ml = [
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
    "tensorflow>=2.8.0",
    "torch>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/basten99/QuantTradingPro"
Documentation = "https://basten99.github.io/QuantTradingPro/"
Repository = "https://github.com/basten99/QuantTradingPro.git"
Issues = "https://github.com/basten99/QuantTradingPro/issues"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"